sendemail webpage for reset pass

--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JustinGuo03/GIRL.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JustinGuo03/GIRL/issues"
+  },
+  "homepage": "https://github.com/JustinGuo03/GIRL#readme",
   "description": ""
 }
