forgot password (NOT DONE)

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ MAIL_PASSWORD=gaminginirl
 OAUTH_CLIENTID=443062011977-901aspm53seja7ku7ui9bmc1fqfb66oc.apps.googleusercontent.com
 OAUTH_CLIENT_SECRET=KlsR0819zZKz_UXKQnltCy6L
 OAUTH_REFRESH_TOKEN=1//04Hs7yJiIS4k2CgYIARAAGAQSNwF-L9IrJByxUWApR5GTShiDk7xKM-612jHR0fVUEQE9ryIhiSLldOc9cJ8dcU-DnyiJzV8CHsQ
+
+BCRYPT_SALT=10
+DB_URL=mongodb://127.0.0.1:27017/testDB
+JWT_SECRET=mfefkuhio3k2rjkofn2mbikbkwjhnkj
+CLIENT_URL=localhost:3000
