--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
+    "url": "^0.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
